# libeni

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
docs/: 404.rst  contributing.rst  developer-guide.rst  documentation.rst  getting-started.rst  index.rst  parsing-eni-arguments.rst  prerequisites.rst  testing-eni-operations.rst  testing-prebuilt-eni-operations.rst  types.rst
docs/diagrams/: README.txt  libeni.xml
docs/guides/: build-eni-operations.rst  implement-eni-operations.rst  parsing-eni-arguments.rst  test-eni-operations.rst
docs/tools/: consensus.rst  eni_cli.rst
examples/: CMakeLists.txt  Makefile  eni_reverse.cpp  expected.txt  main.c
examples/caesar_cipher/: CMakeLists.txt  Makefile  README.md  eni_caesar_cipher.cpp  eni_caesar_cipher.h  expected.txt  main.c
examples/eni/: CMakeLists.txt  Makefile  README.md  eni_reverse.cpp  main.c  output.txt
examples/eni/caesar_cipher/: eni_caesar_cipher.cpp  eni_caesar_cipher.h
examples/eni/json/: eni_json.cpp
examples/eni/reverse/: eni_reverse.cpp
examples/eni_crypto/: Makefile  README.md  eni_crypto.cpp  eni_crypto.h  main.c
examples/eni_crypto/tests/: Makefile  priv.pem  pub.pem  rsa.cpp
examples/json/: CMakeLists.txt  Makefile  ex1.json  ex3.json  expected.txt  main.cpp
include/: ceni.h  eni.h  eni_types.h
include/eni/: eni.h  eni_types.h
include/eni/adt/: HashBase.h  HashIterator.h  HashTable.h  PointerIterator.h  StringHashTable.h  StringHasher.h  StringMap.h  Vector.h
include/eni/adt/bits/: HashBase.tcc  HashIterator.tcc  HashTable.tcc  PointerIterator.tcc  Vector.tcc
include/eni/diagnostic/: DiagList.inc  Exception.h
include/eni/json/: Array.h  Object.h  Parser.h  Value.h
include/eni/support/: MallocAllocator.h
include/json/: Array.h  Callbacks.h  Notation.h  Object.h  Parser.h  Type.h  Value.h
include/lity/: eni.h
include/lity/adt/: HashBase.h  HashIterator.h  HashTable.h  StringHashTable.h  StringHasher.h  StringMap.h  StringRef.h  TypeTag.h  TypeTraits.h  Vector.h
include/lity/adt/Bits/: Vector.tcc
include/lity/adt/bits/: HashBase.h  HashBase.tcc  HashIterator.tcc  HashTable.tcc  Vector.tcc
include/lity/json/: Array.h  Callbacks.h
include/lity/support/: DataTypes.h  ELF.h  MallocAllocator.h
lib/: eni.cpp  eni_types.cpp
lib/diagnostic/: Exception.cpp
lib/json/: Array.cpp  Notation.cpp  Object.cpp  Value.cpp
lib/lity/adt/: StringRef.cpp  TypeTag.cpp
test/: CMakeLists.txt  t0000-smoke.sh  t0001-testlib.sh  t0002-examples-eni-reverse.sh  t0003-examples-eni-caesar.sh  t0004-tools-eni-crypto.sh  t0005-tools-eni-scrypt.sh  t0006-json-parse-error.sh  t0006-tools-eni-crypto.sh  t0007-bug-493629.sh  t0008-json-parseString.sh  t0009-json-arrayGet.sh  t0010-jsontests.sh  testlib.sh
test/consensus/: CMakeLists.txt  consensus.py  malformed.json.in  tests.json.in
test/consensus/data/: rsa
test/examples/: EniTest.cpp  main.cpp
test/json/: ParserTest.cpp  ValueTest.cpp  main.cpp
test/jsontests/: __init__.py  test_basic_containers.py  test_basic_data_types.py  test_nested_containers.py
test/t0004/: priv_decrypt.json  pub_encrypt.json
test/t0006/: CMakeLists.txt  json_parse_error.cpp  privkey.json  pubkey.json
test/t0007/: CMakeLists.txt  bug_493629.cpp
test/unittests/: CMakeLists.txt  EniBaseTest.cpp  EniTypesTest.cpp  ValueTest.cpp  main.cpp
test/unittests/adt/: HashTableTest.cpp  PointerIteratorTest.cpp  StringHashTableTest.cpp  StringMapTest.cpp  VectorTest.cpp
test/unittests/data/: 0.json
test/unittests/diagnostic/: ExceptionTest.cpp
test/unittests/json/: ArrayTest.cpp  ParserTest.cpp  ValueTest.cpp
test/unittests/lity/: StringRefTest.cpp  TypeTraitsTest.cpp
tools/: CMakeLists.txt
tools/eni_cli/: CMakeLists.txt  ceni.h  eni_gas.cpp  eni_run.cpp  optParser.cpp  optParser.h
tools/eni_crypto/: CMakeLists.txt  Makefile  README.md  demo.c  eni_crypto.cpp  eni_crypto.h  expected.txt  output.txt
tools/eni_crypto/test/: CMakeLists.txt  EniTest.cpp  HexTest.cpp  RsaTest.cpp  main.cpp
tools/eni_crypto/tests/: CMakeLists.txt  Makefile  hex.cpp  rsa.cpp
tools/eni_scrypt/: CMakeLists.txt  README.md  eni_scrypt.cpp  eni_scrypt.h
tools/eni_scrypt/test/: CMakeLists.txt  ScryptTest.cpp  main.cpp
